@@ -805,11 +805,8 @@ StartUp(Bool defaultScreenOnly)
 
 
     /* cursors */
-#ifdef DEFINABLE_CURSOR
-    wCursor[WCUR_NORMAL] = None;
-#else
-    wCursor[WCUR_NORMAL] = XCreateFontCursor(dpy, XC_left_ptr);    
-#endif
+    /*wCursor[WCUR_NORMAL] = None;*/
+    wCursor[WCUR_NORMAL] = XCreateFontCursor(dpy, XC_left_ptr);
     wCursor[WCUR_ROOT] = XCreateFontCursor(dpy, XC_left_ptr);
     wCursor[WCUR_ARROW] = XCreateFontCursor(dpy, XC_top_left_arrow);
     wCursor[WCUR_MOVE] = XCreateFontCursor(dpy, XC_fleur);
